--- a/index.html
+++ b/index.html
@@ -4708,5 +4708,7 @@ function processUploadedFile(file){
 initPortal();
 animPortal();
 </script>
+
+<script src="firebase-patch.js"></script>
 </body>
 </html>
